--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <div class="container-fluid d-flex">
+        <a class="navbar-brand" href="#"><img src="assets/svg/PRODIGY.svg" alt="" width="50%"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,25 +41,81 @@
         </div>
       </div>
     </nav>
-
-    <div class="container-fluid d-flex text-center">
-      <div class="container my-auto"><p class="texto-padrao">O Prodigy é uma empresa recente no mercado de software de gestão empresarial para comércios gerais, mas já conquistou a confiança de muitos clientes. Com uma equipe altamente capacitada e soluções inovadoras, o Prodigy vem se destacando por oferecer uma ferramenta completa e eficiente para a gestão de negócios.
-      </p><br><button>Conheça nosso planos</button></div>
-      <div class="container my-auto"><img src="assets/svg/painel1.svg" alt="Apresentação" width="70%"></div>
-    </div>    
-    <div class="container-fluid d-flex text-center fundo-branco pt-5 reverse"> 
-      <div class="container my-auto"><p class="texto-verde">A missão do Prodigy é simplificar a gestão de negócios, tornando-a mais eficiente e produtiva. A empresa acredita que um software de gestão empresarial eficiente é fundamental para o sucesso de qualquer negócio, e por isso busca oferecer soluções personalizadas para cada cliente.
+    <!-- PAINEL 1 -->
+    <div class="container-fluid d-flex text-center mobile">
+      <div class="container my-auto">
+        <p class="texto-padrao">O Prodigy é uma empresa recente no mercado de software de gestão empresarial para comércios gerais, mas já conquistou a confiança de muitos clientes. Com uma equipe altamente capacitada e soluções inovadoras, o Prodigy vem se destacando por oferecer uma ferramenta completa e eficiente para a gestão de negócios.</p>
+        <br>
+        <button class="botao-branco">Conheça nosso planos</button>
+      </div>
+      <div class="container my-auto">
+        <img src="assets/svg/painel1.svg" alt="Apresentação" width="70%">
+      </div>
+    </div>
+    <!-- PAINEL 2 -->
+    <div class="container-fluid d-flex text-center fundo-branco pt-5 reverse mobile"> 
+      <div class="container my-auto">
+        <p class="texto-verde">A missão do Prodigy é simplificar a gestão de negócios, tornando-a mais eficiente e produtiva. A empresa acredita que um software de gestão empresarial eficiente é fundamental para o sucesso de qualquer negócio, e por isso busca oferecer soluções personalizadas para cada cliente.
  
         A empresa tem como objetivo principal ajudar os negócios a crescerem e se desenvolverem de forma sustentável, através de soluções tecnológicas que simplificam e otimizam processos internos. O Prodigy acredita que a tecnologia deve estar a serviço das pessoas, e não o contrário, e por isso se preocupa em oferecer soluções intuitivas e fáceis de usar.</p></div> 
-        <div class="container my-auto"><h1>Produtos</h1><img src="assets/svg/painel2.svg" alt="Produtos" width="70%"></div>
+        <div class="container my-auto">
+          <h1 class="titulo">Produtos</h1>
+          <img src="assets/svg/painel2.svg" alt="Produtos" width="70%"></div>
     </div>
-    <div class="container-fluid d-flex text-center pt-5 fundo-branco">
-      <div class="container my-auto"><p class="texto-verde">Ao usar o software de gestão empresarial Prodigy, você pode economizar tempo e dinheiro, além de aumentar a precisão dos dados e a facilidade de colaboração. Nossos produtos são projetados para ajudá-lo a tomar decisões melhores e mais informadas, com base em dados precisos e em tempo real.</p></div>
-      <div class="container my-auto"><h1>Benefícios</h1><img src="assets/svg/painel3.svg" alt="Beneficios" width="70%"></div>
+    <!-- PAINEL 3 -->
+    <div class="container-fluid d-flex text-center pt-5 fundo-branco mobile">
+      <div class="container my-auto">
+        <p class="texto-verde">Ao usar o software de gestão empresarial Prodigy, você pode economizar tempo e dinheiro, além de aumentar a precisão dos dados e a facilidade de colaboração. Nossos produtos são projetados para ajudá-lo a tomar decisões melhores e mais informadas, com base em dados precisos e em tempo real.</p></div>
+      <div class="container my-auto">
+        <h1 class="titulo">Benefícios</h1>
+        <img src="assets/svg/painel3.svg" alt="Beneficios" width="70%"></div>
     </div>
-    <div class="container-fluid d-flex text-center reverse"> 
-      <div class="container my-auto"><p class="texto-padrao">Entendemos que cada empresa é única, e é por isso que oferecemos soluções personalizadas para atender às necessidades específicas de cada cliente. Nós trabalhamos com você para entender suas necessidades e objetivos de negócios, garantindo que nossos produtos ajudem a alcançar os resultados desejados.</p></div>
-      <div class="container my-auto"><h1 class="">Soluções<br>Personalizadas</h1><img src="assets/svg/painel4.svg" alt="" width="70%"></div>
+    <!-- PAINEL 4 -->
+    <div class="container-fluid d-flex text-center reverse mobile"> 
+      <div class="container my-auto">
+        <p class="texto-padrao">Entendemos que cada empresa é única, e é por isso que oferecemos soluções personalizadas para atender às necessidades específicas de cada cliente. Nós trabalhamos com você para entender suas necessidades e objetivos de negócios, garantindo que nossos produtos ajudem a alcançar os resultados desejados.</p></div>
+      <div class="container my-auto">
+        <h1 class="titulo-branco">Soluções<br>Personalizadas</h1>
+        <img src="assets/svg/painel4.svg" alt="" width="70%"></div>
+    </div>
+    <!-- PAINEL 5 -->
+    <div class="container-fluid d-flex text-center fundo-branco mobile">
+      <div class="container my-auto">
+        <p class="texto-verde">Nós valorizamos nossos clientes e estamos sempre disponíveis para fornecer suporte de alta qualidade, incluindo treinamento e suporte técnico. Temos uma equipe dedicada pronta para ajudá-lo em qualquer etapa do caminho.</p>
+      </div>
+      <div class="container my-auto">
+        <h1 class="titulo">Suporte ao<br>cliente</h1>
+        <img src="assets/svg/painel5.svg" alt="" width="70%">
+      </div>
+    </div>
+    <!-- COMENTARI DOS CLIENTES -->
+    <div class="container-fluid d-flex text-center fundo-chumbo mobile">
+      <div class="container comentario-bg">
+        <p class="comentario">"A Prodigy realmente me surpreendeu com sua interface intuitiva e recursos abrangentes. A gestão de projetos nunca foi tão fácil! Recomendo para qualquer empresa em busca de eficiência."</p>
+        <p class="assinatura"><br>~ Rafaela Neves, Sócia da SHEIN</p>
+      </div>
+      <div class="container comentario-bg">
+        <p class="comentario">"Estou impressionado com a capacidade do Prodigy em unir todas as áreas da minha empresa em uma única plataforma. A integração perfeita entre finanças, recursos humanos e operações é um diferencial incrível."</p>
+        <p class="assinatura">- Wallace Coelho, Gerente de Autopeças</p>
+      </div>
+    </div>
+    <div class="container-fluid d-flex text-center mobile">
+      <div class="container comentario-bg">
+        <p class="comentario">"O Prodigy se destaca pela sua flexibilidade. Independentemente do tamanho da empresa ou setor, suas ferramentas personalizáveis atendem às necessidades específicas. Uma solução versátil e poderosa!"</p>
+        <p class="assinatura">- Lyncoln Santana, CEO da Quicksilver</p>
+      </div>
+      <div class="container comentario-bg">
+        <p class="comentario">"Finalmente encontrei um software de gestão empresarial que realmente entrega o que promete. Com o Prodigy, minha produtividade aumentou consideravelmente, permitindo que eu me concentre no crescimento estratégico. Altamente recomendado!"</p>
+        <p class="assinatura">- Raíssa Berto, Dona de doceria</p>
+      </div>
+    </div>
+    <!-- RODAPE -->
+    <div class="container-fluid mobile">
+      <div class="container"></div>
+      <div class="container"></div>
+      <div class="container"></div>
+      <hr class="linha">
+      <div class="text-center"><span>Copyright © 2023 | Prodigy. Todos os direitos reservados</span></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
