--- a/index.html
+++ b/index.html
@@ -119,4 +119,176 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
+
+  <style>
+    :root {
+    --turquesa: #30BEB2;
+    --cinza-chumbo: #2D3037;
+    --verde-agua-claro: #E2F0EF;
+    --verde-petroleo: #1D7870;
+    --vermelho-fogo: #FF2323;
+    --vermelho-vinho: #A00808;
+
+    --sombra-text: 0px 1px 1px rgba(0, 0, 0, 0.50);
+    --box-shadow: box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+    --fundo: radial-gradient(63.82% 50% at 50.00% 50%, #1D7870 0%, #11554F 100%);
+}
+
+body {
+    font-family: 'Montserrat' !important;
+    background: radial-gradient(63.82% 50% at 50.00% 50%, #1D7870 0%, #11554F 100%) !important;
+    height: 100vh
+}
+
+span{
+    color: var(--verde-agua-claro);
+}
+
+.fundo-branco {
+    background-color: var(--verde-agua-claro);
+}
+
+.fundo-chumbo{
+    color: var(--cinza-chumbo);
+}
+
+.reverse {
+    flex-direction: row-reverse;
+}
+
+.linha {
+    width: 75%;
+    color: var(--cinza-chumbo);
+    margin-left: 12.50%;
+}
+
+/* NAVBAR ESTILOS */
+.navbar a{
+    color: var(--verde-agua-claro) !important;
+    transition: all 0.35s ease-in-out;
+}
+
+.navbar ul li a:hover{
+    color: var(--turquesa) !important;
+    transform: scale(1.1);
+}
+
+.nav-item {
+    margin-left: 2em;
+    font-size: 1.7em;
+    font-weight: 400;
+}
+
+.active{
+    /* Estilo do link selecionado **VERIFICAR DEPOIS**  */
+}
+
+
+/* ESTILOS DE BOTÕES */
+.botao-branco {
+    background-color: var(--verde-agua-claro);
+    color: var(--verde-petroleo);
+    border: none;
+    border-radius: 5px !important;
+    padding: 1em 2em !important;
+    font-weight: 400;
+    text-shadow: var(--sombra-text);
+    transition: all 0.45s ease-in-out;
+    box-shadow: var(--box-shadow);
+}
+
+.botao-branco:hover {
+    background-color: var(--turquesa);
+    color: var(--verde-agua-claro);
+}
+
+.botao-verde {
+    background-color: var(--turquesa);
+    color: var(--verde-agua-claro);
+    border: none;
+    border-radius: 5px !important;
+    padding: 1em 2em !important;
+    font-weight: 400;
+    text-shadow: var(--sombra-text);
+    transition: all 0.45s ease-in-out;
+    box-shadow: var(--box-shadow);
+}
+
+.botao-verde:hover {
+    color: var(--turquesa);
+    background-color: var(--verde-agua-claro);
+}
+
+/* ESTILOS DE TEXTO */
+.texto-verde,
+.texto-padrao {
+    color: var(--verde-agua-claro);
+    font-size: 1.5em;
+    text-align: justify;
+    padding: 1em;
+}
+
+.texto-verde {
+    color: var(--verde-petroleo) !important;
+}
+
+.titulo,
+.titulo-branco {
+    color: var(--verde-agua-claro);
+    font-size: 1.8em;
+    text-align: center !important;
+    padding: 1em;
+    font-weight: 600;
+}
+
+.titulo {
+    color: var(--verde-petroleo);
+}
+
+.comentario-bg {
+    background-color: var(--turquesa);
+    border-radius: 8px 0px 8px 0px;
+    margin: 2em;
+    width: 40% !important;
+}
+
+.comentario {
+    color: var(--verde-agua-claro);
+    font-size: 1.2em;
+    text-align: justify;
+    padding: 1em;
+}
+
+.assinatura {
+    font-style: italic;
+    text-align: end;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+@media (max-width: 450px){
+    .navbar {
+        display: inline-flex !important;
+    }
+
+    .navbar span{
+        position: absolute;
+    }
+
+    .mobile{
+        flex-direction: column-reverse !important;
+        padding-bottom: 1em;
+    }
+
+    .comentario-bg {
+        width: 90% !important;
+    }
+
+    .comentario {
+        text-align: center !important;
+    }
+}
+
+  </style>
 </html>
