--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="assinatura">- Wallace Coelho, Gerente de Autopeças</p>
       </div>
     </div>
-    <div class="container-fluid d-flex text-center text-center">
+    <div class="container-fluid d-flex text-center text-center mobile">
       <div class="container comentario-bg">
         <p class="comentario">"O Prodigy se destaca pela sua flexibilidade. Independentemente do tamanho da empresa ou setor, suas ferramentas personalizáveis atendem às necessidades específicas. Uma solução versátil e poderosa!"</p>
         <p class="assinatura">- Lyncoln Santana, CEO da Quicksilver</p>
